{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 83,
  "lineage": "ed736361-b139-6c86-33a8-9fc23f423c4b",
  "resources": [
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3df83cd6630da18",
            "arn": "arn:aws:ec2:eu-west-1:666334373537:instance/i-0b682cd034e18b80d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sno-7-lxp69-master-profile",
            "id": "i-0b682cd034e18b80d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.2xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-051221ca710e27b6a"
              }
            ],
            "primary_network_interface_id": "eni-051221ca710e27b6a",
            "private_dns": "ip-10-0-150-255.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.150.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:666334373537:key/7ffef4e1-8541-45f7-8fdb-00d8ecec20ed",
                "throughput": 125,
                "volume_id": "vol-0555b74c12321f82b",
                "volume_size": 120,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03bf977d5d05ac0a5",
            "tags": {
              "Name": "sno-7-lxp69-master-0",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "tags_all": {
              "Name": "sno-7-lxp69-master-0",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "sno-7-lxp69-master-0-vol",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "vpc_security_group_ids": [
              "sg-052b65e4a3f678068"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-aint/a7e116a09934a383-20230314091830609000000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-aint/a7e116a09934a383",
            "target_id": "10.0.150.255"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-sint/41e07e078ccb1fdd-20230314091830649200000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-sint/41e07e078ccb1fdd",
            "target_id": "10.0.150.255"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-aext/6a8a6a03d7823666-20230314091830611600000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-aext/6a8a6a03d7823666",
            "target_id": "10.0.150.255"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666334373537:network-interface/eni-051221ca710e27b6a",
            "description": "Created By OpenShift Installer",
            "id": "eni-051221ca710e27b6a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:cd:85:95:aa:8b",
            "owner_id": "666334373537",
            "private_dns_name": "ip-10-0-150-255.eu-west-1.compute.internal",
            "private_ip": "10.0.150.255",
            "private_ip_list": [
              "10.0.150.255"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.150.255"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-052b65e4a3f678068"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03bf977d5d05ac0a5",
            "tags": {
              "Name": "sno-7-lxp69-master-0",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "tags_all": {
              "Name": "sno-7-lxp69-master-0",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666334373537:subnet/subnet-03bf977d5d05ac0a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 8178,
            "cidr_block": "10.0.128.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bf977d5d05ac0a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666334373537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-8tlh5-private-eu-west-1a",
              "kubernetes.io/cluster/argo-hub-8tlh5": "owned",
              "kubernetes.io/cluster/sno-4-zvfrn": "shared",
              "kubernetes.io/cluster/sno-5-z4dsd": "shared",
              "kubernetes.io/cluster/sno-6-ck6vb": "shared",
              "kubernetes.io/cluster/sno-7-lxp69": "shared",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-00aa3ba11c68eed73"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666334373537:subnet/subnet-0326efb65f92ef854",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 8181,
            "cidr_block": "10.0.192.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0326efb65f92ef854",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666334373537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-8tlh5-private-eu-west-1c",
              "kubernetes.io/cluster/argo-hub-8tlh5": "owned",
              "kubernetes.io/cluster/sno-4-zvfrn": "shared",
              "kubernetes.io/cluster/sno-5-z4dsd": "shared",
              "kubernetes.io/cluster/sno-6-ck6vb": "shared",
              "kubernetes.io/cluster/sno-7-lxp69": "shared",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-00aa3ba11c68eed73"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666334373537:subnet/subnet-07df61ea3e177d610",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 8181,
            "cidr_block": "10.0.160.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07df61ea3e177d610",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666334373537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-8tlh5-private-eu-west-1b",
              "kubernetes.io/cluster/argo-hub-8tlh5": "owned",
              "kubernetes.io/cluster/sno-4-zvfrn": "shared",
              "kubernetes.io/cluster/sno-5-z4dsd": "shared",
              "kubernetes.io/cluster/sno-6-ck6vb": "shared",
              "kubernetes.io/cluster/sno-7-lxp69": "shared",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-00aa3ba11c68eed73"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666334373537:subnet/subnet-04c7c0139ee99cfc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 8181,
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c7c0139ee99cfc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666334373537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-8tlh5-public-eu-west-1b",
              "kubernetes.io/cluster/argo-hub-8tlh5": "owned",
              "kubernetes.io/cluster/sno-4-zvfrn": "shared",
              "kubernetes.io/cluster/sno-5-z4dsd": "shared",
              "kubernetes.io/cluster/sno-6-ck6vb": "shared",
              "kubernetes.io/cluster/sno-7-lxp69": "shared"
            },
            "vpc_id": "vpc-00aa3ba11c68eed73"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666334373537:subnet/subnet-08cf9ae6c254f7ebb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 8179,
            "cidr_block": "10.0.64.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cf9ae6c254f7ebb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666334373537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-8tlh5-public-eu-west-1c",
              "kubernetes.io/cluster/argo-hub-8tlh5": "owned",
              "kubernetes.io/cluster/sno-4-zvfrn": "shared",
              "kubernetes.io/cluster/sno-5-z4dsd": "shared",
              "kubernetes.io/cluster/sno-6-ck6vb": "shared",
              "kubernetes.io/cluster/sno-7-lxp69": "shared"
            },
            "vpc_id": "vpc-00aa3ba11c68eed73"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666334373537:subnet/subnet-0c5df23ce40ea012f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 8177,
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5df23ce40ea012f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666334373537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "argo-hub-8tlh5-public-eu-west-1a",
              "kubernetes.io/cluster/argo-hub-8tlh5": "owned",
              "kubernetes.io/cluster/sno-4-zvfrn": "shared",
              "kubernetes.io/cluster/sno-5-z4dsd": "shared",
              "kubernetes.io/cluster/sno-6-ck6vb": "shared",
              "kubernetes.io/cluster/sno-7-lxp69": "shared"
            },
            "vpc_id": "vpc-00aa3ba11c68eed73"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666334373537:vpc/vpc-00aa3ba11c68eed73",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00e517191d814fbd6",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0b5255976993c60d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00aa3ba11c68eed73",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f9335e436b17e78d",
            "owner_id": "666334373537",
            "tags": {
              "Name": "argo-hub-8tlh5-vpc",
              "kubernetes.io/cluster/argo-hub-8tlh5": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_external",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:loadbalancer/net/sno-7-lxp69-ext/b3968e27f9e825cb",
            "arn_suffix": "net/sno-7-lxp69-ext/b3968e27f9e825cb",
            "dns_name": "sno-7-lxp69-ext-b3968e27f9e825cb.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:loadbalancer/net/sno-7-lxp69-ext/b3968e27f9e825cb",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sno-7-lxp69-ext",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c7c0139ee99cfc5"
              },
              {
                "subnet_id": "subnet-08cf9ae6c254f7ebb"
              },
              {
                "subnet_id": "subnet-0c5df23ce40ea012f"
              }
            ],
            "subnets": [
              "subnet-04c7c0139ee99cfc5",
              "subnet-08cf9ae6c254f7ebb",
              "subnet-0c5df23ce40ea012f"
            ],
            "tags": {
              "Name": "sno-7-lxp69-ext",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "tags_all": {
              "Name": "sno-7-lxp69-ext",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-00aa3ba11c68eed73",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.data.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:loadbalancer/net/sno-7-lxp69-int/eb32b383bf36b381",
            "arn_suffix": "net/sno-7-lxp69-int/eb32b383bf36b381",
            "dns_name": "sno-7-lxp69-int-eb32b383bf36b381.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:loadbalancer/net/sno-7-lxp69-int/eb32b383bf36b381",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "sno-7-lxp69-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0326efb65f92ef854"
              },
              {
                "subnet_id": "subnet-03bf977d5d05ac0a5"
              },
              {
                "subnet_id": "subnet-07df61ea3e177d610"
              }
            ],
            "subnets": [
              "subnet-0326efb65f92ef854",
              "subnet-03bf977d5d05ac0a5",
              "subnet-07df61ea3e177d610"
            ],
            "tags": {
              "Name": "sno-7-lxp69-int",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "tags_all": {
              "Name": "sno-7-lxp69-int",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-00aa3ba11c68eed73",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_external_api",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:listener/net/sno-7-lxp69-ext/b3968e27f9e825cb/5f5b288ce7f3008a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-aext/6a8a6a03d7823666",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:listener/net/sno-7-lxp69-ext/b3968e27f9e825cb/5f5b288ce7f3008a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:loadbalancer/net/sno-7-lxp69-ext/b3968e27f9e825cb",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_external",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.data.aws_subnet.public",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:listener/net/sno-7-lxp69-int/eb32b383bf36b381/264b238fda25fb46",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-aint/a7e116a09934a383",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:listener/net/sno-7-lxp69-int/eb32b383bf36b381/264b238fda25fb46",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:loadbalancer/net/sno-7-lxp69-int/eb32b383bf36b381",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:listener/net/sno-7-lxp69-int/eb32b383bf36b381/201c37c9f767366a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-sint/41e07e078ccb1fdd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:listener/net/sno-7-lxp69-int/eb32b383bf36b381/201c37c9f767366a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:loadbalancer/net/sno-7-lxp69-int/eb32b383bf36b381",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_external",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-aext/6a8a6a03d7823666",
            "arn_suffix": "targetgroup/sno-7-lxp69-aext/6a8a6a03d7823666",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-aext/6a8a6a03d7823666",
            "lambda_multi_value_headers_enabled": false,
            "name": "sno-7-lxp69-aext",
            "port": 6443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "sno-7-lxp69-aext",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "tags_all": {
              "Name": "sno-7-lxp69-aext",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-00aa3ba11c68eed73"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-aint/a7e116a09934a383",
            "arn_suffix": "targetgroup/sno-7-lxp69-aint/a7e116a09934a383",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-aint/a7e116a09934a383",
            "lambda_multi_value_headers_enabled": false,
            "name": "sno-7-lxp69-aint",
            "port": 6443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "sno-7-lxp69-aint",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "tags_all": {
              "Name": "sno-7-lxp69-aint",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-00aa3ba11c68eed73"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-sint/41e07e078ccb1fdd",
            "arn_suffix": "targetgroup/sno-7-lxp69-sint/41e07e078ccb1fdd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:666334373537:targetgroup/sno-7-lxp69-sint/41e07e078ccb1fdd",
            "lambda_multi_value_headers_enabled": false,
            "name": "sno-7-lxp69-sint",
            "port": 22623,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "sno-7-lxp69-sint",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "tags_all": {
              "Name": "sno-7-lxp69-sint",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-00aa3ba11c68eed73"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666334373537:security-group/sg-052b65e4a3f678068",
            "description": "Created By OpenShift Installer",
            "egress": [],
            "id": "sg-052b65e4a3f678068",
            "ingress": [],
            "name": "terraform-20230314091800351100000002",
            "name_prefix": "terraform-",
            "owner_id": "666334373537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sno-7-lxp69-master-sg",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "tags_all": {
              "Name": "sno-7-lxp69-master-sg",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-00aa3ba11c68eed73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:666334373537:security-group/sg-09ecd14b7037e4254",
            "description": "Created By OpenShift Installer",
            "egress": [],
            "id": "sg-09ecd14b7037e4254",
            "ingress": [],
            "name": "terraform-20230314091800349500000001",
            "name_prefix": "terraform-",
            "owner_id": "666334373537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sno-7-lxp69-worker-sg",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "tags_all": {
              "Name": "sno-7-lxp69-worker-sg",
              "kubernetes.io/cluster/sno-7-lxp69": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-00aa3ba11c68eed73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3886835685",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-1360706129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-2622721124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 2379,
            "id": "sgrule-864581488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-975431870",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-4150976139",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 6443,
            "id": "sgrule-4257062021",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": -1,
            "id": "sgrule-3904005090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-3573075021",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-431094392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-221149482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-3227995935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-3266593256",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-268269533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-2879575090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-1726734855",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10257,
            "id": "sgrule-3546671979",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10257,
            "id": "sgrule-506256734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10259,
            "id": "sgrule-334073832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10259,
            "id": "sgrule-3735075293",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-1587239434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-2480041023",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6641,
            "id": "sgrule-2051986999",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6641,
            "id": "sgrule-3070746626",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-3178635139",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-1883187638",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-422165612",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-3563096665",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22,
            "id": "sgrule-1021836868",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-3068893574",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-2074259379",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": "sg-09ecd14b7037e4254",
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22623,
            "id": "sgrule-1630260083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052b65e4a3f678068",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3594536850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3925603622",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-615695123",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": "sg-052b65e4a3f678068",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-3370020855",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-93804994",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": "sg-052b65e4a3f678068",
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": -1,
            "id": "sgrule-1708646005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-1969314361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-3089656844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": "sg-052b65e4a3f678068",
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_nat_t",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-4292083299",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-810141345",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-4244697236",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": "sg-052b65e4a3f678068",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-1499419515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": "sg-052b65e4a3f678068",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-2484495694",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-2889803371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-1635242078",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": "sg-052b65e4a3f678068",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_nat_t_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-849004630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": "sg-052b65e4a3f678068",
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-1339270114",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-2191168983",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": "sg-052b65e4a3f678068",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-3951820813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-650458680",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": "sg-052b65e4a3f678068",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22,
            "id": "sgrule-1894284494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-1142300367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-2304715002",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09ecd14b7037e4254",
            "self": false,
            "source_security_group_id": "sg-052b65e4a3f678068",
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    }
  ]
}